[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[project]
name = "cognitopy"
version = "1.1.3"
authors = [
  { name="Daniel Muñoz Gonzalez", email="dani16595@gmail.com" },
]
description = "Python package to use aws cognito in a simple way"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-jose==3.3.0",
    "boto3==1.34.49"
]

[project.urls]
"Homepage" = "https://github.com/DaniMG95/cognitopy"
"Bug Tracker" = "https://github.com/DaniMG95/cognitopy/issues"


[tool.coverage.run]
source = "src"


[tool.coverage.report]
skip_empty = true
include=["src/*"]